...
    <string name="title_notifications">Notifications</string>
    <string name="access_token">pk.eyJ1Ijoia2llcmFud2F1Z2giLCJhIjoiY2puNG5vN2htMjl4djNxcGwyZHE3a3B5eSJ9.Tf1cBvIfzpwoZtQ-XeOygQ</string>

    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Incorrect email or password</string>
    <string name="auth_failed">Incorrect email or password, try again or sign up below.</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Instructions sent to your email!</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Register here</string>
    <string name="btn_link_to_login">Already have an account?.</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[Back]]></string>
...
